--- a/assets/scss/abstracts/_variables.scss
+++ b/assets/scss/abstracts/_variables.scss
@@ -1,31 +1,28 @@
 //Color Schemes
 //First color scheme
-
+$white: #fff;
+$snow: #fafafa;
+$quick-silver:#a0a0a0;
 //Second color scheme
-
-
+$jelly-bean:#e56353;
+$salmon:#e97f72;
+$pastel-pink:#f0a9a1;
 //Third color scheme
-
-
-//Fourth color scheme
-
-
+$granite-gray:#686963;
+$taupe-gray:#91918d;
+$gray:#babab8;
 // Typography
 //Font Families
-
+$raleway:'Raleway', sans-serif;
 // Typography
 // Font Weight
+$extra-light: 200;
 $regular: 400;
-$semi-bold: 600;
 $bold: 700;
 
 // Typography
 // Font Sizes
-$xxxx-large: 130px;
-$xxx-large: 100px;
-$xx-large: 30px;
-$x-large: 20px;
-$large: 18px;
-$medium: 16px;
-$small: 14px;
-$x-small: 12px;
+$xx-large: 100px;
+$x-large: 70px;
+$large: 50px;
+$medium: 18px;
