--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,8 +1,20 @@
-// .header {
-//     padding-top: 2rem;
-//     padding-left: 2rem;
-// }
+.header{
+    color: $snow;
+    background-color: $jelly-bean;
+    height: 100vh;
+}
 
-// .logo {
-//     width: 120px;
-// }
+.header__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.header__title{
+    font-size: $x-large;
+    font-weight: $bold;
+    &.header__title--extra-light{
+        font-weight: $extra-light;
+    }
+}
