--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -8,9 +8,10 @@
 @import 'base/reset';
 @import 'base/typography';
 // Layout
+@import 'layout/nav';
 @import 'layout/header';
-@import 'layout/main';
-@import 'layout/forms';
+@import 'layout/article';
+@import 'layout/footer';
 // Components
 @import 'componentes/buttons';
 @import 'componentes/inputs';
