--- a/assets/scss/layout/_article.scss
+++ b/assets/scss/layout/_article.scss
@@ -1,12 +1,43 @@
-// .main {
-//     position: absolute;
-//     left: 50%;
-//     top: 9.5vh;
-//     transform: translateX(-50%);
-// }
+.article {
+    padding: 100px 0;
 
-// .main__container {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-// }
+    // gives color to one specific article
+    &.article--gray {
+        background-color: $taupe-gray;
+    }
+
+    .article__container {
+        padding: 0 9vw;
+
+        .article__img {
+            object-fit: cover;
+            border-radius: 10px;
+
+            &.article__img--photo {
+                width: 400px;
+            }
+        }
+
+        .article__container__text {
+            padding: 0 18vw;
+
+            &.article__container__text--snow {
+                color: $snow;
+            }
+
+            &.article__container__text--gray {
+                color: $granite-gray;
+            }
+
+            .article__title {
+                margin: 25px 0;
+                font-size: 45px;
+                font-weight: 700;
+            }
+
+            .article__paragraph {
+                text-align: left;
+            }
+        }
+    }
+}
