--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -5,10 +5,7 @@
 }
 
 .header__container{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
+    @include flex-container;
 }
 
 .header__title{
