--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,14 +1,10 @@
-// .form{
-//     position: absolute;
-//     left: 50%;
-//     transform: translateX(-50%);
-// }
-
-// .form__container{
-//  display:flex;
-//  flex-direction: column;
-// }
-
-// .form__button{
-//     text-align: center;
-// }
+.footer{
+    background-color: $granite-gray;
+    height: 200px;
+    .footer__container{
+        @include flex-container;
+        .footer__logo{
+            width: 180px;
+        }
+    }
+}
