--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -11,9 +11,9 @@
 @import 'layout/nav';
 @import 'layout/header';
 @import 'layout/article';
+@import 'layout/section';
 @import 'layout/footer';
 // Components
 @import 'componentes/buttons';
-@import 'componentes/inputs';
 // Pages
 // Theme
